# Polymarket-bot

./: .env.backup_20260203_213751  .env.example  .gitignore  CHANGELOG.md  CHANGELOG_v3.2.md  FINAL_SUMMARY.md  GITHUB_SYNC_GUIDE.md  IMPLEMENTATION_PLAN_v0.4.0.md  OFFLINE_INSTALL.md  PHASE4_COMPLETION_REPORT.md  PHASE4_FINAL_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE4_STATUS.md  PHASE4_TEST_CATALOG.md  PHASE_0_MONITORING_GUIDE.md  PRODUCTION_KIT_COMPLETE.md  PRODUCTION_LAUNCH.md  PRODUCTION_START_STATUS.md  PROFILES_ALERTS_COMPLETE.md  PROFILES_ALERTS_STATUS.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  PUSH_GUIDE.md  QUICK_START.md  README.md  RELEASE_NOTES.md  REMAINING_STEPS.sh  RUNNING_STATUS.md  RUN_REPORT.md  SHADOW_PRODUCTION_RUNNING.md  SHADOW_PRODUCTION_STATUS.md  START_HERE.txt  SYNC_NOW.md  TDD_EXAMPLES.md  TDD_SUMMARY.md  TEST_REPORT.md  WEB_UI_ACCESS_GUIDE.md  check.sh  claude_python_only.sh  coverage.json  (+19 more)
config/: alerts.production.yaml  alerts.yaml  config.yaml  sandbox.yaml
data/: active_markets.json  run_log.txt
docs/: CHANGELOG_V5.3.md  GO_NO_GO_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PHASE1_TELEMETRY.md  PHASE2_RESILIENCE.md  PHASE3_BACKTESTING.md  PRODUCTION_PLAN.md  PRODUCTION_RUNBOOK.md  PRODUCT_ANALYSIS_LOW_TRADING.md  REAL_EXECUTION_FIX.md  STRATEGIES.md  USDC_CONVERSION_GUIDE.md
scripts/: backup_state.sh  check_env.sh  fetch_markets.py  fix_env.sh  go_no_go_check.sh  production_daily_report.py  quick_check.sh  restart_with_real_execution.sh  seed_profiles.sh  start_live_safe.sh  start_shadow.sh  summarize_metrics.py  (+1 more)
src/: main.py  (+1 more)
(+119 files in other folders)
